--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,11 @@
         android:text="登录界面"
         />
 
+    <Button
+        android:id="@+id/btn_slide_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="滑动菜单"
+        />
+
 </LinearLayout>
