自定义View2020/08/30完结

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,11 @@
         android:text="滑动菜单"
         />
 
+    <Button
+        android:id="@+id/btn_watch_face"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="表"
+        />
+
 </LinearLayout>
