--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,4 +35,12 @@
         </attr>
     </declare-styleable>
     
+    <declare-styleable name="WatchFaceView">
+        <attr name="secondColor" format="color"/>
+        <attr name="minuteColor" format="color"/>
+        <attr name="hourColor" format="color"/>
+        <attr name="scaleColor" format="color"/>
+        <attr name="watchFaceBg" format="reference"/>
+    </declare-styleable>
+    
 </resources>
