--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
 
     <color name="text_gray">#888585</color>
     <color name="text_gray_press">#99888585</color>
+
+    <!--  watch face color list  -->
+    <color name="secondDefaultColor">#ff0000</color>
+    <color name="minuteDefaultColor">#00ff00</color>
+    <color name="hourDefaultColor">#0000ff</color>
+    <color name="scaleDefaultColor">#ffffff</color>
 </resources>
